//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table DAO {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  description String [not null]
  blockchainDaoId String [not null, default: 'not_set']
  adminAddress String [not null]
  adminId String [not null]
  admin User
  profilePicture String [not null]
  backgroundPicture String
  resources File [not null]
  categories Category [not null]
  tags Tag [not null]
  metadata Json
  participants String[] [not null, note: 'UserIds']
  files String[] [not null, note: 'FileIds']
  activeCampaigns Campaign [not null]
  socials Social [not null]
}

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique]
  address String [unique, not null]
  nonce String [not null]
  firstname String
  lastname String
  about String
  socials Social [not null]
  files File [not null]
  adminOf DAO [not null]
  participantOf Json[] [not null]
  role Role [not null]
}

Table File {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  uploadedIPFS Boolean [not null, default: true]
  name String [not null]
  owner User
  ownerId String
  dao DAO
  daoId String
  metadataUrl String
  metadataCid String
  imageUrl String
  imageCid String
  metadata Json
  resolver String
}

Table Social {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  icon String [not null]
  url String [not null]
  user User
  userId String
  daoId String
  dao DAO
  other Json
}

Table Contract {
  id String [pk]
  name String [not null]
  abi Json [not null]
  address String [not null]
  networkName String [not null]
  explorerUrl String [not null]
  networkSlug String [not null]
  chainId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Campaign {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  subtitle String [not null]
  campaignId String [not null]
  transactionHash String [not null]
  category Category [not null]
  subCategory Category [not null]
  images String[] [not null]
  videos String[] [not null]
  tokenCurrency String [not null]
  tokenCurrencyAddress String [not null]
  minAmount String [not null]
  goalAmount String [not null]
  completionDate String [not null]
  country String [not null]
  city String [not null]
  state String [not null]
  metadata Json
  daoId String [not null]
  dao DAO [not null]
  categoryId String
}

Table Tag {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  dao DAO [not null]
}

Table Category {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  ownerId String [not null]
  name String [unique, not null]
  daos DAO [not null]
  campaigns Campaign [not null]
  subCampaigns Campaign [not null]
  type TypeCategory [not null, default: 'CATEGORY']
}

Table PendingNonce {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  address String [unique]
  nonce String [not null]
}

Table CategoryToDAO {
  categoriesId String [ref: > Category.id]
  daosId String [ref: > DAO.id]
}

Table tags {
  tagsId String [ref: > Tag.id]
  daoId String [ref: > DAO.id]
}

Table category {
  categoryId String [ref: > Category.id]
  campaignsId String [ref: > Campaign.id]
}

Table subcategory {
  subcategoryId String [ref: > Category.id]
  subcampaignsId String [ref: > Campaign.id]
}

Enum TypeCategory {
  CATEGORY
  SUBCATEGORY
}

Enum Role {
  ADMIN
  USER
}

Ref: DAO.adminId > User.id

Ref: File.ownerId > User.id

Ref: File.daoId > DAO.id

Ref: Social.userId > User.id

Ref: Social.daoId > DAO.id

Ref: Campaign.daoId > DAO.id